--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <!-- Menu -->
     <div class="collapse navbar-collapse" id="navbarMenu">
       <ul class="navbar-nav ml-auto">
-        <li class="nav-item active">
+        <li class="nav-item">
           <a class="nav-link" href="#" @click="changePage('Index')"><i class="fas fa-home"></i> Início</a>
         </li>
         <li class="nav-item">
@@ -220,14 +220,22 @@
 new Vue({
   el: '#app',
   data: {
-    currentPage: 'Index' // Define a página inicial
+    currentPage: ''
+  },
+  mounted() {
+    if (window.location.pathname === '') {
+      this.currentPage = 'Index';
+    } else {
+      this.currentPage = window.location.pathname;
+    }
+    this.changePage();
   },
   methods: {
     changePage(page) {
       setTimeout(() => {
         this.currentPage = page;
         document.getElementById('navbarMenu').classList.remove('show');
-      }, 1000); // Tempo simulado para carregamento
+      }, 600); // Tempo simulado para carregamento
     }
   }
 });
@@ -258,7 +266,7 @@ if (observacao.trim() !== "") {
     textoFormatado += "Observação: " + observacao + "\n";
 }
 
-window.location.href = "https://wa.me/558382333568?text=" + encodeURIComponent(textoFormatado);
+window.location.href = "https://wa.me/558398482321?text=" + encodeURIComponent(textoFormatado);
 
         } else {
             alert("Por favor, preencha todos os campos obrigatórios.");
@@ -292,9 +300,9 @@ window.location.href = "https://wa.me/558382333568?text=" + encodeURIComponent(t
             case 'salao_principal':
                 return 'Salão Principal';
             case 'parquinho':
-                return 'Parquinho';
+                return 'Parquinho (Espaço para Crianças)';
             case 'varanda':
-                return 'Varanda';
+                return 'Varanda (Mais escolhida)';
             case 'piscina':
                 return 'Piscina';
             default:
